# Auto-research-framework-integrating-Optoelectronics

./: .gitignore  README.md  pyproject.toml
configs/: coupler_v1.yaml
docs/: DESIGN.md
golden/: coupler_golden.json
picfix/agents/: base.py  baseline.py  fixed_loop.py  llm.py  meta.py
picfix/core/: audit.py  config.py  constants.py  nfo.py  params.py  proposal.py  spec.py  spectrum.py  task.py  trace.py  truth.py  verifier.py  workflow.py
picfix/experiments/: run.py  tasks.py
picfix/gate/: guard.py  integrity.py  policy.yaml  regression.py
picfix/judge/: frozen_judge.py
picfix/layout/: drc.py  geometry.py
picfix/metrics/: compute.py  plots.py  report_stats.py  stats.py
picfix/priors/: store.py
picfix/sil/: evidence.py  interface.py  llm_diagnoser.py  rule_classifier.py  sds.py
picfix/simulators/: analytical.py  base.py  meep_stub.py
runs/coupler_v1/20260712-230646/: RESULTS_NOTES.md  config_snapshot.yaml  metrics.csv  metrics.json  priors_meta_governed_r0.json  task_results.jsonl  trace_baseline.jsonl  trace_fixed_loop.jsonl  trace_meta_governed.jsonl  trace_meta_unguarded.jsonl
runs/coupler_v1/20260713-101523/: RESULTS_NOTES.md  metrics.csv  metrics.json  stats.json  stats.md  task_results.jsonl
runs/coupler_v1_thr2/20260713-120554/: RESULTS_NOTES.md  config_snapshot.yaml  stats.md  (+4 more)
scripts/: calibrate.py
tests/: conftest.py  helpers.py  test_agents.py  test_analytical.py  test_append_only.py  test_contrast.py  test_core_models.py  test_e2e.py  test_gate.py  test_judge.py  test_llm_providers.py  test_metrics.py  test_sil.py  test_stats.py
